feat: complete project (#9)